# raytrace

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: test.yaml
examples/basic/: render.toml
examples/bouncing_spheres/: render.toml
examples/cornell_box/: render.toml
examples/earth/: render.toml
examples/melee/: render.toml
examples/perlin/: render.toml
examples/primitives/geometry/cube/: render.toml
examples/primitives/geometry/quad/: render.toml
examples/primitives/geometry/sphere/: render.toml
examples/primitives/geometry/triangle/: render.toml
examples/primitives/geometry/wavefront/: render.toml
examples/primitives/material/checkered/: render.toml
examples/primitives/material/dielectric/: render.toml
examples/primitives/material/glass/: render.toml
examples/primitives/material/lambertian/: render.toml
examples/primitives/material/light/: render.toml
examples/primitives/material/metal/: render.toml
examples/quads/: render.toml
examples/smoke/: render.toml
examples/sweet_dreams/: render.toml
src/: main.rs
src/camera/: mod.rs
src/config/: mod.rs
src/geometry/: aabb.rs  axis.rs  bvh.rs  cube.rs  empty.rs  mod.rs  quad.rs  rotate.rs  scale.rs  sphere.rs  translate.rs  triangle.rs  volume.rs  wavefront.rs
src/interval/: mod.rs
src/material/: dielectric.rs  isotropic.rs  lambertian.rs  light.rs  metal.rs  mod.rs  texture.rs
src/math/: mod.rs
src/noise/: mod.rs
src/object/: aabb.rs  bvh.rs  empty.rs  hittable.rs  mod.rs  quad.rs  sphere.rs
src/ray/: mod.rs
(+3 files in other folders)
