[package]
name = "raytrace"
version = "0.1.0"
edition = "2024"

[dependencies]
atty = "0.2.14"
clap = { version = "4.5.32", features = ["derive"] }
colored = "3.0.0"
humantime = "2.2.0"
image = "0.25.5"
itertools = "0.14.0"
nalgebra = "0.33.2"
num_cpus = "1.16.0"
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
serde-inline-default = "0.2.3"
threadpool = "1.8.1"
toml = "0.8.20"

[profile.dev]
opt-level = 3
